--- a/default.hbs
+++ b/default.hbs
@@ -33,8 +33,8 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/">Hjem</a></li>
-            <li><a href="/blog">Galleri</a></li>
-            <li><a href="/about">Om Vibeke Larsen</a></li>
+            <li><a href="/#blog">Galleri</a></li>
+            <li><a href="/#about">Om Vibeke Larsen</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
