--- a/post.hbs
+++ b/post.hbs
@@ -1,14 +1,11 @@
 {{!< default}}
-
-<div class="span12">
-
-    <article class="{{post_class}}">
-
+<div class="row" style="background: #2c3e50;">
+  <div class="col-md-2"></div>
+  <div class="col-md-8">
+<div class="holder">
         {{#post}}
 
         <!--<span class="post-meta"><time datetime="{{date format="YYYY-MM-DD"}}">{{date format='DD MMM YYYY'}}</time> {{#if tags}}on {{tags separator=" | "}}{{/if}}</span>-->
-
-        <h1 class="post-title">{{{title}}}</h1>
 
         <section class="post-content">
             {{content}}
@@ -22,20 +19,9 @@
                     <p>{{author.bio}}</p>
                 </section>
             {{/if}}
-
-            <section class="share">
-                <h4>Share</h4>
-                <a href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}"
-                    onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
-                    <i class="fa fa-facebook-square"></i>
-
-                </a>
-            </section>
-
         </footer>
 
         {{/post}}
-
-    </article>
-
+</div>
+<div class="col-md-2"></div>
 </div>
