--- a/index.hbs
+++ b/index.hbs
@@ -4,8 +4,11 @@
 <header class="site-head" {{#if @blog.cover}}style="background-image: url({{@blog.cover}})"{{/if}}>
     <div class="vertical">
         <div class="site-head-content inner">
-            {{#if @blog.logo}}<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="Blog Logo" /></a>{{/if}}
-            <h1 class="blog-title">{{@blog.title}}</h1><br/>
+            {{#if @blog.logo}}
+				<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="Blog Logo" style="width:400px;"/></a><br/>
+			{{else}}
+				<h1 class="blog-title">{{@blog.title}}</h1><br/>
+			{{/if}}
             <h2 class="blog-description">{{@blog.description}}</h2>
         </div>
     </div>
@@ -52,10 +55,3 @@
 
 	</div>
 </div>
-<script type="text/javascript">
-  $(document).ready(function(){
-    $('.carousel').carousel({
-      interval: 2000
-    });
-  });
-</script>
