--- a/default.hbs
+++ b/default.hbs
@@ -28,7 +28,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">{{@blog.title}} {{@blog.description}}</a>
+			{{#if @blog.logo}}
+				<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="Blog Logo" style=" height: 45px; margin-top: 5px;" /></a>
+			{{else}}
+				<a class="navbar-brand" href="#">{{@blog.title}}</a>
+			{{/if}}
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -41,13 +45,13 @@
     </div>
     {{{body}}}
 
-    <!--<footer class="site-footer">        
+    <footer class="site-footer">        
         <div class="container">
             <a class="subscribe icon-feed" href="{{@blog.url}}/rss/"><i class="fa fa-rss"></i></a> 
              <section class="copyright"><a href="/">{{@blog.title}}</a> &copy; 2014 &bull; All rights reserved.</section>
              <section class="poweredby">Proudly published with <a class="icon-ghost" href="http://ghost.org">Ghost</a></section>
         </div>
-    </footer>-->
+    </footer>
 
     {{ghost_foot}}
     <script type="text/javascript" src="/assets/js/masonry.pkgd.min.js"></script>
