--- a/index.hbs
+++ b/index.hbs
@@ -30,10 +30,10 @@
 	</div>
 </div>
 {{! The main content area on the homepage }}
-
-<div class="blog">
+<a style="top:-30px">&nbsp;</a>
+<div id="blog" class="blog">
 <h1 style="text-align:center; color:white;">Galleri</h1>
-	<div id="container" class="content js-masonry" data-masonry-options='{ "columnWidth": 200, "itemSelector": ".item" }'>
+	<div id="container" class="content">
 		{{! Each post will be output using this markup }}
 		{{#foreach posts}}
 	<div class="item">
