--- a/index.hbs
+++ b/index.hbs
@@ -30,8 +30,8 @@
 	</div>
 </div>
 {{! The main content area on the homepage }}
-<a style="top:-30px">&nbsp;</a>
-<div id="blog" class="blog">
+<a id="blog" style="top:-40px">&nbsp;</a>
+<div class="blog">
 <h1 style="text-align:center; color:white;">Galleri</h1>
 	<div id="container" class="content">
 		{{! Each post will be output using this markup }}
