Parallax and lazyload

--- a/default.hbs
+++ b/default.hbs
@@ -55,6 +55,8 @@
 
     {{ghost_foot}}
     <script type="text/javascript" src="/assets/js/masonry.pkgd.min.js"></script>
+	<script type="text/javascript" src="/assets/js/unveil.js"></script>
+	<script type="text/javascript" src="/assets/js/parallax.js"></script>
 	<script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="/assets/js/index.js"></script>
 
