--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -256,7 +256,8 @@ margin-top: -10px;
 }
 .site-head {
     background-position: center;
-    background-size: 100%;
+    background-size: cover;
+    background-attachment:fixed;
 }
 
 .blog-title, .blog-description {
@@ -705,7 +706,7 @@ table.plain tbody > tr:nth-child(odd) > th {
   .post {
     width: 100%;
     margin: 2.6rem 0;
-    border-bottom: #f5f5f5 2px solid;
+    border-bottom: none;
   }
 
   article {
