--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -66,7 +66,7 @@ h4 a, h5 a, h6 a {
 .blog .item { 
     margin-bottom: 10px;
     width: 440px;
-
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.68);
 }
 .box-link {
     display: block;
@@ -89,6 +89,8 @@ background-color: #fff;
 .item img {
     vertical-align: top;
     width: 100%;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 .item .text {
     font-size: 13px;
