--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -89,6 +89,10 @@ background-color: #fff;
 .item img {
     vertical-align: top;
     width: 100%;
+    -webkit-border-top-left-radius: 5px;
+    -webkit-border-top-right-radius: 5px;
+    -moz-border-top-left-radius: 5px;
+    -moz-border-top-right-radius: 5px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
 }
