--- a/index.hbs
+++ b/index.hbs
@@ -13,24 +13,8 @@
         </div>
     </div>
 </header>
-<div class="row ad-content">
-	<div class="col-md-8 col-md-offset-2">
-		<div class="col-md-4">
-			<h1>Hei.<small>Heisann!</small></h1>
-			<p>The big featured header on the homepage, with the site logo and description</p>
-		</div>
-		<div class="col-md-4">
-			<h1>Hei.<small>Heisann!</small></h1>
-			<p>The big featured header on the homepage, with the site logo and description</p>
-		</div>
-		<div class="col-md-4">
-			<h1>Hei.<small>Heisann!</small></h1>
-			<p>The big featured header on the homepage, with the site logo and description</p>
-		</div>
-	</div>
-</div>
 {{! The main content area on the homepage }}
-<a id="blog" style="top:-40px">&nbsp;</a>
+<a id="blog" style="margin-top: -40px; position: absolute;">&nbsp;</a>
 <div class="blog">
 <h1 style="text-align:center; color:white;">Galleri</h1>
 	<div id="container" class="content gallery">
