--- a/default.hbs
+++ b/default.hbs
@@ -38,6 +38,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/">Hjem</a></li>
             <li><a href="/#blog">Galleri</a></li>
+			<li><a href="/utstillinger">Utstillinger</a></li>
             <li><a href="/about">Om Vibeke Larsen</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -50,6 +51,7 @@
             <a class="subscribe icon-feed" href="{{@blog.url}}/rss/"><i class="fa fa-rss"></i></a> 
              <section class="copyright"><a href="/">{{@blog.title}}</a> &copy; 2014 &bull; All rights reserved.</section>
              <section class="poweredby">Proudly published with <a class="icon-ghost" href="http://ghost.org">Ghost</a></section>
+				<section class="madeby">Developed by <a href="http://karlsolgard.net">Karl Solg&aring;rd</a></section>
         </div>
     </footer>
 
