--- a/default.hbs
+++ b/default.hbs
@@ -14,7 +14,7 @@
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="/assets/stylesheets/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="/assets/stylesheets/screen.css" />
-
+	<link rel='shortcut icon' type='image/x-icon' href='/img/favicon.ico' />
     {{ghost_head}}
 
 </head>
