--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -684,6 +684,43 @@ table.plain tbody > tr:nth-child(odd) > th {
   line-height: 1.5em;
 }
 
+.flat{
+    text-align:center;
+}
+.flat div {
+  text-transform: uppercase;
+}
+.button-flat-empty {
+  position: relative;
+  display: inline-block;
+  padding: 15px 20px;
+  margin: 20px 10px;
+  border-radius: 3px;
+  font-family: sans-serif;
+  font-size: 12px;
+  line-height: 1.2em;
+  font-weight: 400;
+  letter-spacing: 1px;
+  text-decoration: none;
+  background: #fff;
+  color: #fff;
+  -moz-transition-property: background-color;
+  -o-transition-property: background-color;
+  -webkit-transition-property: background-color;
+  transition-property: background-color;
+  -moz-transition-duration: 0.2s;
+  -o-transition-duration: 0.2s;
+  -webkit-transition-duration: 0.2s;
+  transition-duration: 0.2s;
+  background: none;
+  border: 2px solid #fff;
+}
+.button-flat-empty:hover, .button-flat-empty.active {
+  background: #fff;
+  color: #0D0F27;
+  cursor: pointer;
+}
+
 @media only screen and (max-width: 900px) {
   blockquote {
     margin-left: 0;
@@ -896,3 +933,4 @@ border-radius: 5px;
     margin-right: 0px;
     margin-left: 0px;
 }
+
