--- a/default.hbs
+++ b/default.hbs
@@ -61,6 +61,7 @@
 	<script type="text/javascript" src="/assets/js/unveil.js"></script>
 	<script type="text/javascript" src="/assets/js/parallax.js"></script>
 	<script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="assets/js/jquery.cookie.js"></script>
 	<script type="text/javascript" src="/assets/js/index.js"></script>
 
 </body>
