Require js modular pattern + cleanup

--- a/index.hbs
+++ b/index.hbs
@@ -22,6 +22,7 @@
         <div class="button-flat-empty Portretter">Portretter og akt</div>
         <div class="button-flat-empty Tegninger">Tegninger og skisser</div>
     </div>
+    <div class="submenus flat"></div>
 	<div id="container" class="content gallery">
 		{{! Each post will be output using this markup }}
 		{{#foreach posts}}
