--- a/default.hbs
+++ b/default.hbs
@@ -1,68 +1,61 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+	<meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-    <title>{{meta_title}}</title>
-    <meta name="description" content="{{meta_description}}" />
+	<title>{{meta_title}}</title>
+	<meta name="description" content="{{meta_description}}" />
 
-    <meta name="HandheldFriendly" content="True" />
-    <meta name="MobileOptimized" content="320" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="HandheldFriendly" content="True" />
+	<meta name="MobileOptimized" content="320" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="/assets/stylesheets/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/stylesheets/screen.css" />
+	<link rel="stylesheet" type="text/css" href="/assets/stylesheets/screen.css" />
 	<link rel='shortcut icon' type='image/x-icon' href='/img/favicon.ico' />
-    {{ghost_head}}
+	{{ghost_head}}
 
 </head>
 <body class="{{body_class}}">
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+	  <div class="container">
+		<div class="navbar-header">
+		  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+			<span class="sr-only">Toggle navigation</span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		  </button>
 			{{#if @blog.logo}}
 				<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="Blog Logo" style=" height: 45px; margin-top: 5px;" /></a>
 			{{else}}
 				<a class="navbar-brand" href="{{@blog.url}}">{{@blog.title}}</a>
 			{{/if}}
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="/">Hjem</a></li>
-            <li><a href="/#blog">Galleri</a></li>
+		</div>
+		<div class="navbar-collapse collapse">
+		  <ul class="nav navbar-nav navbar-right">
+			<li><a href="/">Hjem</a></li>
+			<li><a href="/#blog">Galleri</a></li>
 			<li><a href="/utstillinger">Utstillinger</a></li>
-            <li><a href="/about">Om Vibeke Larsen</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
-    {{{body}}}
+			<li><a href="/about">Om Vibeke Larsen</a></li>
+		  </ul>
+		</div><!--/.nav-collapse -->
+	  </div>
+	</div>
+	{{{body}}}
 
-    <footer class="site-footer">        
-        <div class="container">
-            <a class="subscribe icon-feed" href="{{@blog.url}}/rss/"><i class="fa fa-rss"></i></a> 
-             <section class="copyright"><a href="/">{{@blog.title}}</a> &copy; 2014 &bull; All rights reserved.</section>
-             <section class="poweredby">Proudly published with <a class="icon-ghost" href="http://ghost.org">Ghost</a></section>
+	<footer class="site-footer">        
+		<div class="container">
+			<a class="subscribe icon-feed" href="{{@blog.url}}/rss/"><i class="fa fa-rss"></i></a> 
+			 <section class="copyright"><a href="/">{{@blog.title}}</a> &copy; 2014 &bull; All rights reserved.</section>
+			 <section class="poweredby">Proudly published with <a class="icon-ghost" href="http://ghost.org">Ghost</a></section>
 				<section class="madeby">Developed by <a href="http://karlsolgard.net">Karl Solg&aring;rd</a></section>
-        </div>
-    </footer>
+		</div>
+	</footer>
 
-    {{ghost_foot}}
-    <script type="text/javascript" src="/assets/js/masonry.pkgd.min.js"></script>
-	<script type="text/javascript" src="/assets/js/imagesloaded.js"></script>
-	<script type="text/javascript" src="/assets/js/unveil.js"></script>
-	<script type="text/javascript" src="/assets/js/parallax.js"></script>
-	<script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="assets/js/jquery.cookie.js"></script>
-	<script type="text/javascript" src="/assets/js/index.js"></script>
+    <script data-main="/assets/js/main" src="/assets/js/lib/require.js"></script>
 
 </body>
 </html>
