--- a/index.hbs
+++ b/index.hbs
@@ -18,15 +18,15 @@
 <div class="blog">
     <h1 style="text-align:center; color:white;">Galleri</h1>
     <div class="flat">
-        <div class="button-flat-empty Landskap">Landskap og stilleben</div>
-        <div class="button-flat-empty Portretter">Portretter og akt</div>
-        <div class="button-flat-empty Tegninger">Tegninger og skisser</div>
+        <div class="button-flat-empty Hoved-Landskap">Landskap og stilleben</div>
+        <div class="button-flat-empty Hoved-Portretter">Portretter og akt</div>
+        <div class="button-flat-empty Hoved-Tegninger">Tegninger og skisser</div>
     </div>
     <div class="submenus flat"></div>
 	<div id="container" class="content gallery">
 		{{! Each post will be output using this markup }}
 		{{#foreach posts}}
-        <div class="item {{#foreach tags}}{{name}}{{/foreach}}">
+        <div class="item {{#foreach tags}}{{name}} {{/foreach}}">
             <a class="box-link" href="{{url}}">
                 <span class="img-holder">{{content words="0"}}</span>
                 <span class="text">
