--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -937,3 +937,32 @@ border-radius: 5px;
 .submenus {
     background: #1E2027;
 }
+@media (max-width: 767px) {
+    .button-flat-empty {
+        position: relative;
+        display: inline-block;
+        padding: 15px 20px;
+        margin: 0px 10px;
+        width: 100%;
+        border-radius: 0;
+        font-family: sans-serif;
+        font-size: 12px;
+        line-height: 1.2em;
+        font-weight: 400;
+        letter-spacing: 1px;
+        text-decoration: none;
+        background: #fff;
+        color: #fff;
+        -moz-transition-property: background-color;
+        -o-transition-property: background-color;
+        -webkit-transition-property: background-color;
+        transition-property: background-color;
+        -moz-transition-duration: 0.2s;
+        -o-transition-duration: 0.2s;
+        -webkit-transition-duration: 0.2s;
+        transition-duration: 0.2s;
+        background: none;
+        border-bottom: 1px solid #fff;
+    }
+
+}
