--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -942,7 +942,7 @@ border-radius: 5px;
         position: relative;
         display: inline-block;
         padding: 15px 20px;
-        margin: 0px 10px;
+        margin: 0;
         width: 100%;
         border-radius: 0;
         font-family: sans-serif;
