Adding RSS loading

--- a/index.hbs
+++ b/index.hbs
@@ -24,7 +24,7 @@
     </div>
     <div class="submenus flat"></div>
 	<div id="container" class="content gallery">
-		{{! Each post will be output using this markup }}
+		<!--{{! Each post will be output using this markup }}
 		{{#foreach posts}}
         <div class="item {{#foreach tags}}{{name}} {{/foreach}}">
             <a class="box-link" href="{{url}}">
@@ -36,7 +36,7 @@
                 </span>
             </a>
         </div>
-		{{/foreach}}
+		{{/foreach}}-->
 
 	</div>
 </div>
