Masonry and lazyload

--- a/assets/js/Templates/imagenode.htm
+++ b/assets/js/Templates/imagenode.htm
@@ -1,7 +1,7 @@
 ﻿<% _.each(items, function(item){ %>
     <div class="item">
         <a class="box-link" href="<%= item.url %>">
-            <span class="img-holder"><%= item.img %></span>
+            <span class="img-holder"><img src="../../img/spinner.gif" data-src="<%= item.img %>" alt="alt" /></span>
             <span class="text">
                 <strong class="post-title"><%= item.title %></strong>
                 <span><%= item.exerpt %></span>
